# OpenGL_Lab

.cache/clangd/index/: 3dview.c.82FEC7647839DF56.idx  CallbackMaker.c.A40108D65970871A.idx  fg_callback_macros.h.EF02A7821316B9DD.idx  fg_callbacks.c.2CAB1EDA4721F988.idx  fg_cmap_x11.c.4EF90576307A274C.idx  fg_cursor.c.1FD7978701C7C64C.idx  fg_cursor_x11.c.924B8DCDBB1A3B0B.idx  fg_display.c.C94F2D22D5B9BFD3.idx  fg_display_x11_glx.c.F18CD343ABD05732.idx  fg_ext.c.6C6C13D212252343.idx  fg_ext_x11.c.2A73554FC66CA03D.idx  fg_font.c.EA39C9BCA3AB9520.idx  fg_font_data.c.240F7676E78D8599.idx  fg_gamemode.c.92D25C912E505B74.idx  fg_gamemode_x11.c.443AE8451B700B0F.idx  fg_geometry.c.4C5FAF479B345C09.idx  fg_gl2.c.BD8033CEE683F4D6.idx  fg_gl2.h.FFBEC417F9C95B19.idx  fg_glutfont_definitions_x11.c.174A1ED81CD7AB5E.idx  fg_init.c.73B8B135A4F40378.idx  fg_init.h.E27C84570B4E1EF8.idx  fg_init_egl.h.EF24FA21D89094D6.idx  fg_init_x11.c.C25925383F71D398.idx  fg_input_devices.c.708E6CF09F307365.idx  fg_input_devices_x11.c.8E69AA10FD27DD87.idx  fg_internal.h.8744E8086A22D326.idx  fg_internal_x11.h.5A10A0B5B7EDE39C.idx  fg_internal_x11_glx.h.89AACE9B42FD2534.idx  fg_joystick.c.679D27DB405D27A7.idx  fg_joystick_x11.c.34A36EAF18B38D46.idx  fg_main.c.E69C3FBE2E5580E5.idx  fg_main_x11.c.61735B8A77B6D715.idx  fg_menu.c.4CF3C066FB9A5293.idx  fg_menu_x11.c.A7A8A8DDCBF7B930.idx  fg_misc.c.311D9516BB95B008.idx  fg_overlay.c.7B2EC5A6C1F46FB4.idx  fg_spaceball.c.23A1318C433EDADE.idx  fg_spaceball_x11.c.4561213EE9CE4CA7.idx  fg_state.c.EE3D6FF18269EB87.idx  fg_state_x11.c.A8B73BA84D8F646B.idx  (+43 more)
HomeWork/: CMakeLists.txt
HomeWork/Lab12/Task1/: Apologize.txt  BrokenVideo.webm  shadow.cpp
HomeWork/__MACOSX/: ._orb.tga  ._shadow.cpp
HomeWork/src/: Grid.cpp  shadow.cpp  test.cpp  texture.cpp  triangle.cpp
Midtrem/: CMakeLists.txt
Midtrem/src/: Midterm.cpp
final_sampleCode/: CMakeLists.txt
final_sampleCode/__MACOSX/: ._shadow.cpp  ._sphereworld.cpp
final_sampleCode/src/: Robot.cpp  sphereworld.cpp
src/: triangle.cpp
